--- a/float_cmp/index.html
+++ b/float_cmp/index.html
@@ -67,7 +67,7 @@ though the printed output says &quot;0.45 == 0.45&quot;:</p>
 
 <p>This fails due to rounding and inaccuracies within the floating point
 system.  With <code>ApproxEqUlps</code>, we can get the answer we intend:</p>
-<pre id='rust-example-rendered' class='rust '>
+<pre class='rust rust-example-rendered'>
   <span class='kw'>let</span> <span class='ident'>a</span> <span class='op'>=</span> <span class='number'>0.15_f32</span> <span class='op'>+</span> <span class='number'>0.15_f32</span> <span class='op'>+</span> <span class='number'>0.15_f32</span>;
   <span class='kw'>let</span> <span class='ident'>b</span> <span class='op'>=</span> <span class='number'>0.1_f32</span> <span class='op'>+</span> <span class='number'>0.1_f32</span> <span class='op'>+</span> <span class='number'>0.25_f32</span>;
   <span class='macro'>println</span><span class='macro'>!</span>(<span class='string'>&quot;{} == {}&quot;</span>, <span class='ident'>a</span>, <span class='ident'>b</span>);
