--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=float-cmp/index.html" />
+    <meta http-equiv="refresh" content="0; url=float_cmp/index.html" />
   </head>
   <body>
-    <a href="float-cmp/index.html">Click Here if not redirected</a>
+    <a href="float_cmp/index.html">Click Here if not redirected</a>
   </body>
 </html>
