--- a/src/float_cmp/lib.rs.html
+++ b/src/float_cmp/lib.rs.html
@@ -528,22 +528,39 @@
 <span id="486">486</span>
 <span id="487">487</span>
 <span id="488">488</span>
+<span id="489">489</span>
+<span id="490">490</span>
+<span id="491">491</span>
+<span id="492">492</span>
+<span id="493">493</span>
+<span id="494">494</span>
+<span id="495">495</span>
+<span id="496">496</span>
 </pre><pre class='rust '>
 <span class='comment'>// Copyright 2014 Optimal Computing (NZ) Ltd.</span>
 <span class='comment'>// Licensed under the MIT license.  See LICENSE for details.</span>
 
-<span class='doccomment'>//! Defines traits `ApproxEqUlps`, `ApproxOrdUlps`, and `Ulps`, for</span>
-<span class='doccomment'>//! approximate comparison of floating point types which have fallen away</span>
-<span class='doccomment'>//! from equality due to rounding and inaccuracies within the floating point</span>
-<span class='doccomment'>//! system.  Defines implementations for `f32` and `f64`.</span>
+<span class='doccomment'>//! float-cmp defines traits for approximate comparison of floating point types which have fallen</span>
+<span class='doccomment'>//! away from exact equality due to rounding and inaccuracies within the floating point unit of your</span>
+<span class='doccomment'>//! computer&#39;s processor. Implementations of these traits are provided for `f32` and `f64` types.</span>
 <span class='doccomment'>//!</span>
-<span class='doccomment'>//! Also defines `ApproxEqRatio` and `ApproxOrdRatio` to define a notion of</span>
-<span class='doccomment'>//! &quot;close enough&quot; based on the ratio of the difference to the larger.</span>
+<span class='doccomment'>//! Two methods of comparison are provided. The first, `ApproxEqUlps` and `ApproxOrdUlps`, consider</span>
+<span class='doccomment'>//! two comparands equal if the number of representable floating point numbers between them is</span>
+<span class='doccomment'>//! below a specified bound. This works well in most cases.</span>
 <span class='doccomment'>//!</span>
-<span class='doccomment'>//! Floating point operations must round answers to the nearest representable</span>
-<span class='doccomment'>//! number.  Multiple operations may result in an answer different from</span>
-<span class='doccomment'>//! what you expect.  In the following example the assert will fail, even</span>
-<span class='doccomment'>//! though the printed output says &quot;0.45 == 0.45&quot;:</span>
+<span class='doccomment'>//! The second method of comparison, `ApproxEqRatio`, considers two comparands equal if the ratio of</span>
+<span class='doccomment'>//! the difference between them to the larger is below some specified bound.  This handles many of</span>
+<span class='doccomment'>//! the cases that the former type of comparison doesn&#39;t handle well.</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! To help choose which comparison method to use, and to learn many suprising facts and oddities</span>
+<span class='doccomment'>//! about floating point numbers, please refer to the following excellent website:</span>
+<span class='doccomment'>//! https://randomascii.wordpress.com/2012/02/25/comparing-floating-point-numbers-2012-edition/</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! The trait `Ulps` is also defined as a prerequisite for `ApproxEqUlps` and `ApproxOrdUlps`.</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! Floating point operations must round answers to the nearest representable number.  Multiple</span>
+<span class='doccomment'>//! operations may result in an answer different from what you expect.  In the following example,</span>
+<span class='doccomment'>//! the assert will fail, even though the printed output says &quot;0.45 == 0.45&quot;:</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! ```should_fail</span>
 <span class='doccomment'>//!   let a = 0.15_f32 + 0.15_f32 + 0.15_f32;</span>
@@ -552,8 +569,8 @@
 <span class='doccomment'>//!   assert!(a==b)  // Fails, because they are not exactly equal</span>
 <span class='doccomment'>//! ```</span>
 <span class='doccomment'>//!</span>
-<span class='doccomment'>//! This fails due to rounding and inaccuracies within the floating point</span>
-<span class='doccomment'>//! system.  With `ApproxEqUlps`, we can get the answer we intend:</span>
+<span class='doccomment'>//! This fails due to rounding and inaccuracies within the floating point unit of your processor.</span>
+<span class='doccomment'>//! With `ApproxEqUlps`, we can get the answer we intend:</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! ```</span>
 <span class='doccomment'>//!   # extern crate float_cmp;</span>
@@ -566,16 +583,16 @@
 <span class='doccomment'>//!   # }</span>
 <span class='doccomment'>//! ```</span>
 <span class='doccomment'>//!</span>
-<span class='doccomment'>//! We use the term ULP (units of least precision, or units in the last place)</span>
-<span class='doccomment'>//! to mean the difference between two adjacent floating point representations</span>
-<span class='doccomment'>//! (adjacent meaning that there is no floating point number between them).</span>
-<span class='doccomment'>//! The size of an ulp (measured as a float) varies depending on the exponents of</span>
-<span class='doccomment'>//! the floating point numbers in question, but this is quite useful, for it is</span>
-<span class='doccomment'>//! the non-variation of a fixed epsilon (e.g. 0.0000001) which causes epsilon-based</span>
+<span class='doccomment'>//! We use the term ULP (units of least precision, or units in the last place) to mean the</span>
+<span class='doccomment'>//! difference between two adjacent floating point representations (adjacent meaning that there is</span>
+<span class='doccomment'>//! no floating point number between them).  The size of an ULP (measured as a float) varies</span>
+<span class='doccomment'>//! depending on the exponents of the floating point numbers in question, but this is quite useful,</span>
+<span class='doccomment'>//! for it is the non-variation of a fixed epsilon (e.g. 0.0000001) which causes epsilon-based</span>
 <span class='doccomment'>//! comparisons to so often fail with more extreme floating point values.</span>
 <span class='doccomment'>//!</span>
-<span class='doccomment'>//! What we do is define approximate comparison by specifying the maximum number</span>
-<span class='doccomment'>//! of ULPs that the comparands are allowed to differ by.</span>
+<span class='doccomment'>//! Fixed epsilon systems of comparison tend to work well only on numbers within certain ranges.</span>
+<span class='doccomment'>//! It may seem reasonable to expect numbers that differ by less than 0.000001 to be equal, but</span>
+<span class='doccomment'>//! this does not always work well (consider comparing -0.0000000028 to +0.00000097).</span>
 
 <span class='attribute'>#<span class='op'>!</span>[<span class='ident'>feature</span>(<span class='ident'>zero_one</span>)]</span>
 
@@ -1016,7 +1033,6 @@
     <span class='macro'>assert</span><span class='macro'>!</span>(<span class='ident'>x</span>.<span class='ident'>approx_eq_ratio</span>(<span class='kw-2'>&amp;</span><span class='ident'>y</span>, <span class='number'>0.81</span>));
     <span class='macro'>assert</span><span class='macro'>!</span>(<span class='ident'>y</span>.<span class='ident'>approx_ne_ratio</span>(<span class='kw-2'>&amp;</span><span class='ident'>x</span>, <span class='number'>0.79</span>));
 }
-
 </pre>
 </section>
     <section id='search' class="content hidden"></section>
